--- a/frontend/allpack/catering/catering.html
+++ b/frontend/allpack/catering/catering.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Professional wedding catering services with exquisite menus. Book now for unforgettable dining experience.">
     <meta name="keywords" content="wedding catering, event catering, wedding food, catering services">
     <meta name="author" content="Wedding Planner">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <title>Wedding Catering Services | Exquisite Menus</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
         }
         
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/frontend/allpack/catering/cateringdata/11.png') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/allpack/catering/cateringdata/11.png') no-repeat center center/cover;
             min-height: 80vh;
             display: flex;
             align-items: center;
@@ -580,12 +580,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="home.htm">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="about.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Packages</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="booking.html">Booking</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/packages">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/suppliers">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/booking">Booking</a></li>
                 </ul>
             </div>
         </div>
@@ -609,7 +609,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
                     <div class="philosophy-image-container">
-                        <img src="/frontend/allpack/catering/cateringdata/image1.jpeg" alt="Wedding catering setup" class="philosophy-image">
+                        <img src="/allpack/catering/cateringdata/image1.jpeg" alt="Wedding catering setup" class="philosophy-image">
                         <div class="philosophy-badge">
                             <i class="fas fa-award me-2"></i>Award Winning
                         </div>
@@ -648,8 +648,8 @@
                 <!-- Video 1 - Local MP4 -->
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v2.mp4" data-fancybox="video-gallery" data-caption="Wedding Buffet Service">
-                            <img src="/frontend/allpack/catering/cataringvideos/im1.png" alt="Wedding Buffet Service">
+                        <a href="/allpack/catering/cataringvideos/v2.mp4" data-fancybox="video-gallery" data-caption="Wedding Buffet Service">
+                            <img src="/allpack/catering/cataringvideos/im1.png" alt="Wedding Buffet Service">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -664,8 +664,8 @@
                 <!-- Video 2 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v3.mp4" data-fancybox="video-gallery" data-caption="Plated Dinner Service">
-                            <img src="/frontend/allpack/catering/cataringvideos/im2.png" alt="Plated Dinner Service">
+                        <a href="/allpack/catering/cataringvideos/v3.mp4" data-fancybox="video-gallery" data-caption="Plated Dinner Service">
+                            <img src="/allpack/catering/cataringvideos/im2.png" alt="Plated Dinner Service">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -680,8 +680,8 @@
                 <!-- Video 3 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v4.mp4" data-fancybox="video-gallery" data-caption="Cocktail Hour">
-                            <img src="/frontend/allpack/catering/cataringvideos/im3.png" alt="Cocktail Hour">
+                        <a href="/allpack/catering/cataringvideos/v4.mp4" data-fancybox="video-gallery" data-caption="Cocktail Hour">
+                            <img src="/allpack/catering/cataringvideos/im3.png" alt="Cocktail Hour">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -696,8 +696,8 @@
                 <!-- Video 4 - Local MP4 -->
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v5.mp4" data-fancybox="video-gallery" data-caption="Dessert Presentation">
-                            <img src="/frontend/allpack/catering/cataringvideos/im4.png" alt="Dessert Presentation">
+                        <a href="/allpack/catering/cataringvideos/v5.mp4" data-fancybox="video-gallery" data-caption="Dessert Presentation">
+                            <img src="/allpack/catering/cataringvideos/im4.png" alt="Dessert Presentation">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -712,8 +712,8 @@
                 <!-- Video 5 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v7.mp4" data-fancybox="video-gallery" data-caption="Chef's Special">
-                            <img src="/frontend/allpack/catering/cataringvideos/im7.png" alt="Chef's Special">
+                        <a href="/allpack/catering/cataringvideos/v7.mp4" data-fancybox="video-gallery" data-caption="Chef's Special">
+                            <img src="/allpack/catering/cataringvideos/im7.png" alt="Chef's Special">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -728,8 +728,8 @@
                 <!-- Video 6 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v8.mp4" data-fancybox="video-gallery" data-caption="Client Testimonials">
-                            <img src="/frontend/allpack/catering/cataringvideos/im8.png" alt="Client Testimonials">
+                        <a href="/allpack/catering/cataringvideos/v8.mp4" data-fancybox="video-gallery" data-caption="Client Testimonials">
+                            <img src="/allpack/catering/cataringvideos/im8.png" alt="Client Testimonials">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -761,7 +761,7 @@
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="menu-card">
                         <div class="position-relative">
-                            <img src="/frontend/allpack/catering/cateringdata/1.jpg" class="menu-img w-100" alt="Classic Wedding Menu">
+                            <img src="/allpack/catering/cateringdata/1.jpg" class="menu-img w-100" alt="Classic Wedding Menu">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Classic Elegance</h4>
@@ -780,7 +780,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="menu-card">
                         <div class="position-relative">
-                            <img src="/frontend/allpack/catering/cateringdata/2.jpg" class="menu-img w-100" alt="Global Flavors Menu">
+                            <img src="/allpack/catering/cateringdata/2.jpg" class="menu-img w-100" alt="Global Flavors Menu">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Global Flavors</h4>
@@ -799,7 +799,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="menu-card">
                         <div class="position-relative">
-                            <img src="/frontend/allpack/catering/cateringdata/3.jpg" class="menu-img w-100" alt="Rustic Farmhouse Menu">
+                            <img src="/allpack/catering/cateringdata/3.jpg" class="menu-img w-100" alt="Rustic Farmhouse Menu">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Rustic Farmhouse</h4>
@@ -831,20 +831,20 @@
                 <!-- Slide 1 (3 images) -->
                 <div class="gallery-slide active">
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/9.jpg">
-                        <img src="/frontend/allpack/catering/cateringdata/9.jpg" alt="Wedding buffet setup">
+                        <a href="/allpack/catering/cateringdata/9.jpg">
+                        <img src="/allpack/catering/cateringdata/9.jpg" alt="Wedding buffet setup">
                         <p class="gallery-slide-caption">Elegant buffet presentation</p>
                     </a>
                     </div>
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/10.png">
-                        <img src="/frontend/allpack/catering/cateringdata/10.png" alt="Plated dinner service">
+                        <a href="/allpack/catering/cateringdata/10.png">
+                        <img src="/allpack/catering/cateringdata/10.png" alt="Plated dinner service">
                         <p class="gallery-slide-caption">Plated dinner service</p>
                         </a>
                     </div>
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/wall.jpg">
-                        <img src="/frontend/allpack/catering/cateringdata/wall.jpg" alt="Dessert table">
+                        <a href="/allpack/catering/cateringdata/wall.jpg">
+                        <img src="/allpack/catering/cateringdata/wall.jpg" alt="Dessert table">
                         <p class="gallery-slide-caption">Custom dessert table</p>
                         </a>
                     </div>
@@ -853,20 +853,20 @@
                 <!-- Slide 2 (3 images) -->
                 <div class="gallery-slide">
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/4.jpg">
-                        <img src="/frontend/allpack/catering/cateringdata/4.jpg" alt="Cocktail hour">
+                        <a href="/allpack/catering/cateringdata/4.jpg">
+                        <img src="/allpack/catering/cateringdata/4.jpg" alt="Cocktail hour">
                         <p class="gallery-slide-caption">Signature cocktails</p>
                         </a>
                     </div>
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/5.jpg">
-                        <img src="/frontend/allpack/catering/cateringdata/5.jpg" alt="Classic menu">
+                        <a href="/allpack/catering/cateringdata/5.jpg">
+                        <img src="/allpack/catering/cateringdata/5.jpg" alt="Classic menu">
                         <p class="gallery-slide-caption">Classic menu options</p>
                         </a>
                     </div>
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/6.png">
-                        <img src="/frontend/allpack/catering/cateringdata/6.png" alt="Global flavors">
+                        <a href="/allpack/catering/cateringdata/6.png">
+                        <img src="/allpack/catering/cateringdata/6.png" alt="Global flavors">
                         <p class="gallery-slide-caption">International cuisine</p>
                         </a>
                     </div>
@@ -876,19 +876,19 @@
                 <div class="gallery-slide">
                     <div class="gallery-slide-item">
                         <a href="frontend/allpack/catering/cateringdata/7.png">
-                        <img src="/frontend/allpack/catering/cateringdata/7.png" alt="Rustic farmhouse">
+                        <img src="/allpack/catering/cateringdata/7.png" alt="Rustic farmhouse">
                         <p class="gallery-slide-caption">Rustic farmhouse style</p>
                         </a>
                     </div>
                     <div class="gallery-slide-item">
                         <a href="frontend/allpack/catering/cateringdata/8.png">
-                        <img src="/frontend/allpack/catering/cateringdata/8.png" alt="Catering setup">
+                        <img src="/allpack/catering/cateringdata/8.png" alt="Catering setup">
                         <p class="gallery-slide-caption">Professional setup</p>
                         </a>
                     </div>
                     <div class="gallery-slide-item">
-                        <a href="/frontend/allpack/catering/cateringdata/12.jpg">
-                        <img src="/frontend/allpack/catering/cateringdata/12.jpg" alt="Wedding feast">
+                        <a href="/allpack/catering/cateringdata/12.jpg">
+                        <img src="/allpack/catering/cateringdata/12.jpg" alt="Wedding feast">
                         <p class="gallery-slide-caption">Grand wedding feast</p>
                         </a>
                     </div>
