--- a/frontend/allpack/iganze/gakondo.html
+++ b/frontend/allpack/iganze/gakondo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Invitation</title>
+    <title>gakondo</title>
     <!-- Bootstrap CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -18,9 +18,9 @@
     />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <link rel="stylesheet" href="/frontend/allpack/css/videos.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/allpack/css/videos.css">
     <style>
         /* Hero Section Styling */
         .hero-section {
@@ -151,22 +151,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.htm">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="/about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Packages</a>
+                        <a class="nav-link active" href="/packages">Packages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a>
+                        <a class="nav-link active" href="/suppliers">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="booking.html">Booking</a>
+                        <a class="nav-link active" href="/booking">Booking</a>
                     </li>
                 </ul>
             </div>
@@ -177,7 +177,7 @@
     <section class="hero-section">
         <!-- Video Background -->
         <video autoplay muted loop>
-            <source src="/frontend/allpack/iganze/gakondodata/v2.mp4" type="video/mp4">
+            <source src="/allpack/iganze/gakondodata/v2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <!-- Hero Content -->
@@ -196,8 +196,8 @@
                 <!-- Singer 1 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/i1.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/i1.jpg" alt="Singer 1">
+                        <a href="/allpack/iganze/gakondodata/i1.jpg">
+                        <img src="/allpack/iganze/gakondodata/i1.jpg" alt="Singer 1">
                         </a>
                         <div class="card-body">
                             <p>Traditional singer specializing in Rwandan folk music.</p>
@@ -207,8 +207,8 @@
                 <!-- Singer 2 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/i2.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/i2.jpg" alt="Singer 2">
+                        <a href="/allpack/iganze/gakondodata/i2.jpg">
+                        <img src="/allpack/iganze/gakondodata/i2.jpg" alt="Singer 2">
                         </a>
                         <div class="card-body">
                             <p>Master of traditional drumming and cultural performances.</p>
@@ -218,8 +218,8 @@
                 <!-- Singer 3 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/i3.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/i3.jpg" alt="Singer 3">
+                        <a href="/allpack/iganze/gakondodata/i3.jpg">
+                        <img src="/allpack/iganze/gakondodata/i3.jpg" alt="Singer 3">
                         </a>
                         <div class="card-body">
                             <p>Renowned for soulful renditions of traditional wedding songs.</p>
@@ -229,8 +229,8 @@
                 <!-- Singer 4 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/i4.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/i4.jpg" alt="Singer 4">
+                        <a href="/allpack/iganze/gakondodata/i4.jpg">
+                        <img src="/allpack/iganze/gakondodata/i4.jpg" alt="Singer 4">
                         </a>
                         <div class="card-body">
                             <p>Expert in traditional Rwandan wedding rituals and music.</p>
@@ -240,8 +240,8 @@
                 <!-- Singer 5 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/i5.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/i5.jpg" alt="Singer 5">
+                        <a href="/allpack/iganze/gakondodata/i5.jpg">
+                        <img src="/allpack/iganze/gakondodata/i5.jpg" alt="Singer 5">
                         </a>
                         <div class="card-body">
                             <p>Known for energetic performances and cultural authenticity.</p>
@@ -251,8 +251,8 @@
                 <!-- Singer 6 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/i6.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/i6.jpg" alt="Singer 6">
+                        <a href="/allpack/iganze/gakondodata/i6.jpg">
+                        <img src="/allpack/iganze/gakondodata/i6.jpg" alt="Singer 6">
                         </a>
                         <div class="card-body">
                             <p>Specializes in traditional wedding ballads and melodies.</p>
@@ -262,8 +262,8 @@
                 <!-- Singer 7 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/odira.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/odira.jpg" alt="Singer 7">
+                        <a href="/allpack/iganze/gakondodata/odira.jpg">
+                        <img src="/allpack/iganze/gakondodata/odira.jpg" alt="Singer 7">
                         </a>
                         <div class="card-body">
                             <p>Traditional vocalist with a powerful and captivating voice.</p>
@@ -273,8 +273,8 @@
                 <!-- Singer 8 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/odera2.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/Webp.net-resizeimage(18).jpg" alt="Singer 8">
+                        <a href="/allpack/iganze/gakondodata/odera2.jpg">
+                        <img src="/allpack/iganze/gakondodata/Webp.net-resizeimage(18).jpg" alt="Singer 8">
                         </a>
                         <div class="card-body">
                             <p>Performs traditional wedding songs with cultural flair.</p>
@@ -284,8 +284,8 @@
                 <!-- Singer 9 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/alouette_munganyinka_yakumbuje_abataramyi_cecile_kayirebwa_binyuze_mu_ndirimbo_ze_yaririmbye-4430e.jpg">
-                            <img src="/frontend/allpack/iganze/gakondodata/aloite.jpg" alt="Singer 9">
+                        <a href="/allpack/iganze/gakondodata/alouette_munganyinka_yakumbuje_abataramyi_cecile_kayirebwa_binyuze_mu_ndirimbo_ze_yaririmbye-4430e.jpg">
+                            <img src="/allpack/iganze/gakondodata/aloite.jpg" alt="Singer 9">
                         </a>
                         <div class="card-body">
                             <p>Celebrated for her elegant and traditional performances.</p>
@@ -295,8 +295,8 @@
                 <!-- Singer 10 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/impanga.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/impanga.jpg" alt="Singer 10">
+                        <a href="/allpack/iganze/gakondodata/impanga.jpg" alt="Singer 10">
+                            <img src="/allpack/iganze/gakondodata/impanga.jpg" alt="...">
                         </a>
                         <div class="card-body">
                             <p>A group known for lively traditional wedding performances.</p>
@@ -306,8 +306,8 @@
                 <!-- Singer 11 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/francis.jpeg">
-                        <img src="/frontend/allpack/iganze/gakondodata/francis.jpeg" alt="Singer 11">
+                        <a href="/allpack/iganze/gakondodata/francis.jpeg">
+                        <img src="/allpack/iganze/gakondodata/francis.jpeg" alt="Singer 11">
                         </a>
                         <div class="card-body">
                             <p>Expert in Rwandan folk songs and traditional wedding music.</p>
@@ -317,8 +317,8 @@
                 <!-- Singer 12 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="singer-card">
-                        <a href="/frontend/allpack/iganze/gakondodata/icumu.jpg">
-                        <img src="/frontend/allpack/iganze/gakondodata/icumu.jpg" alt="Singer 12">
+                        <a href="/allpack/iganze/gakondodata/icumu.jpg">
+                        <img src="/allpack/iganze/gakondodata/icumu.jpg" alt="Singer 12">
                         </a>
                         <div class="card-body">
                             <p>Traditional performers with harmonious and cultural melodies.</p>
