--- a/frontend/allpack/iriza/iriza.html
+++ b/frontend/allpack/iriza/iriza.html
@@ -6,9 +6,9 @@
     <title>Event Gallery</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/allpack/css/decor.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/allpack/css/decor.css">
     <style>
         /* Hero Section Styling */
         .hero-section {
@@ -181,7 +181,7 @@
     <section class="hero-section">
         <!-- Video Background -->
         <video autoplay muted loop>
-            <source src="/frontend/allpack/iriza/irizadata/v1.mp4" type="video/mp4">
+            <source src="/allpack/iriza/irizadata/v1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <!-- Hero Content -->
@@ -208,7 +208,7 @@
             <!-- Card 1 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Professional Waiter Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza0.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Professional Waiter Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza0.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Dedicated Waitstaff</h5>
                         <p class="card-text">Our team provides attentive, professional waitstaff that ensure your event runs smoothly and your guests are always taken care of.</p>
@@ -218,7 +218,7 @@
             <!-- Card 2 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Serving Guests with Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza10.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Serving Guests with Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza10.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Elegance in Every Detail</h5>
                         <p class="card-text">Our skilled staff delivers impeccable service with an emphasis on elegance, ensuring that your event leaves a lasting impression.</p>
@@ -228,7 +228,7 @@
             <!-- Card 3 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza11.jpg" class="card-img-top" alt="Exquisite Service at Every Event" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza11.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza11.jpg" class="card-img-top" alt="Exquisite Service at Every Event" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza11.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Unforgettable Event Service</h5>
                         <p class="card-text">We provide seamless service, ensuring every detail is meticulously planned to create an unforgettable experience for you and your guests.</p>
@@ -238,7 +238,7 @@
             <!-- Card 4 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/fiston1.jpg" class="card-img-top" alt="Elegant Presentation" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/fiston.jpg')">
+                    <img src="/allpack/iriza/irizadata/fiston1.jpg" class="card-img-top" alt="Elegant Presentation" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/fiston.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Impressive Presentation</h5>
                         <p class="card-text">Our presentation of food and service is designed to impress, ensuring your guests are wowed by both taste and style.</p>
@@ -248,7 +248,7 @@
             <!-- Card 5 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza9.jpg" class="card-img-top" alt="Impeccable Attention to Detail" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza9.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza9.jpg" class="card-img-top" alt="Impeccable Attention to Detail" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza9.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Flawless Execution</h5>
                         <p class="card-text">From the smallest details to the grandest gestures, we ensure everything is perfectly executed to match your vision.</p>
@@ -258,7 +258,7 @@
             <!-- Card 6 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza14.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza14.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza14.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza14.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Top-Tier Service Excellence</h5>
                         <p class="card-text">We prioritize delivering top-tier service that goes above and beyond expectations for an extraordinary event experience.</p>
@@ -268,7 +268,7 @@
             <!-- Card 7 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza2.jpg" class="card-img-top" alt="Exclusive Event Support" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza2.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza2.jpg" class="card-img-top" alt="Exclusive Event Support" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza2.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Exclusive Event Support</h5>
                         <p class="card-text">Our dedicated team ensures every event is supported with the right resources, making it effortless for you to enjoy your special day.</p>
@@ -278,7 +278,7 @@
             <!-- Card 8 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza03.jpg" class="card-img-top" alt="Deluxe Event Solutions" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza03.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza03.jpg" class="card-img-top" alt="Deluxe Event Solutions" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza03.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Tailored Event Solutions</h5>
                         <p class="card-text">We offer tailored event solutions that meet your unique needs, ensuring that every aspect of your event is perfect.</p>
@@ -288,7 +288,7 @@
             <!-- Card 9 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza4.jpg" class="card-img-top" alt="Unrivaled Event Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza4.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza4.jpg" class="card-img-top" alt="Unrivaled Event Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza4.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Unrivaled Event Service</h5>
                         <p class="card-text">Our event service stands out for its professionalism, creativity, and attention to detail, ensuring your event is nothing short of extraordinary.</p>
@@ -298,7 +298,7 @@
             <!-- Card 10 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza5.jpg" class="card-img-top" alt="Event Perfection" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza5.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza5.jpg" class="card-img-top" alt="Event Perfection" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza5.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Flawless Event Coordination</h5>
                         <p class="card-text">Every event is seamlessly coordinated, with careful planning and professional execution to create a flawless experience for all.</p>
@@ -308,7 +308,7 @@
             <!-- Card 11 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza6.jpg" class="card-img-top" alt="Elite Event Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza6.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza6.jpg" class="card-img-top" alt="Elite Event Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza6.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Elite Event Service</h5>
                         <p class="card-text">We deliver elite service, ensuring that each event is a memorable occasion that exceeds all expectations.</p>
@@ -318,7 +318,7 @@
             <!-- Card 12 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza8.jpg" class="card-img-top" alt="Premium Event Solutions" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza8.jpg')">
+                    <img src="/allpack/iriza/irizadata/iriza8.jpg" class="card-img-top" alt="Premium Event Solutions" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/allpack/iriza/irizadata/iriza8.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Premium Event Solutions</h5>
                         <p class="card-text">Our premium event services are designed to elevate your experience, offering exceptional service, style, and care throughout the event.</p>
