--- a/frontend/allpack/photographers/photographers.html
+++ b/frontend/allpack/photographers/photographers.html
@@ -12,8 +12,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- AOS Animation -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <style>
         :root {
             --primary-color: #dc3545;
@@ -44,7 +44,7 @@
         
         /* Hero Section */
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/frontend/allpack/photographers/photoimage/camera-7698836_1280.jpg') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/allpack/photographers/photoimage/camera-7698836_1280.jpg') no-repeat center center/cover;
             min-height: 80vh;
             display: flex;
             align-items: center;
@@ -278,12 +278,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="home.htm">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="about.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Packages</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="booking.html">Booking</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/packages">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/suppliers">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/booking">Booking</a></li>
                 </ul>
             </div>
         </div>
@@ -315,8 +315,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <a href="/frontend/allpack/photographers/photoimage/1.jpeg">
-                        <img src="/frontend/allpack/photographers/photoimage/1.jpeg" alt="Wedding couple dancing" class="gallery-img">
+                        <a href="/allpack/photographers/photoimage/1.jpeg">
+                        <img src="/allpack/photographers/photoimage/1.jpeg" alt="Wedding couple dancing" class="gallery-img">
                         </a>
                         <div class="img-overlay">
                         </div>
@@ -327,8 +327,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/photoimage/Screenshot from 2025-03-26 14-42-55.png" class="gallery-img">
-                            <source src="/frontend/allpack/photographers/datavand/v2.mp4" type="video/mp4">
+                        <video poster="/allpack/photographers/photoimage/Screenshot from 2025-03-26 14-42-55.png" class="gallery-img">
+                            <source src="/allpack/photographers/datavand/v2.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -342,8 +342,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <a href="/frontend/allpack/photographers/photoimage/2.jpg">
-                        <img src="/frontend/allpack/photographers/photoimage/2.jpg" alt="Wedding reception" class="gallery-img">
+                        <a href="/allpack/photographers/photoimage/2.jpg">
+                        <img src="/allpack/photographers/photoimage/2.jpg" alt="Wedding reception" class="gallery-img">
                         </a>
                         <div class="img-overlay">
                         </div>
@@ -354,8 +354,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/photoimage/Screenshot from 2025-03-25 14-17-21.png" class="gallery-img">
-                            <source src="/frontend/allpack/photographers/datavand/1v.mp4" type="video/mp4">
+                        <video poster="/allpack/photographers/photoimage/Screenshot from 2025-03-25 14-17-21.png" class="gallery-img">
+                            <source src="/allpack/photographers/datavand/1v.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -369,8 +369,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <a href="/frontend/allpack/photographers/photoimage/3.jpeg">
-                        <img src="/frontend/allpack/photographers/photoimage/3.jpeg" alt="First dance" class="gallery-img">
+                        <a href="/allpack/photographers/photoimage/3.jpeg">
+                        <img src="/allpack/photographers/photoimage/3.jpeg" alt="First dance" class="gallery-img">
                         </a>
                         <div class="img-overlay">
                         </div>
@@ -381,8 +381,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/photoimage/img3.png" class="gallery-img">
-                            <source src="/frontend/allpack/photographers/datavand/v3.mp4" type="video/mp4">
+                        <video poster="/allpack/photographers/photoimage/img3.png" class="gallery-img">
+                            <source src="/allpack/photographers/datavand/v3.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -396,8 +396,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <a href="/frontend/allpack/photographers/photoimage/5.jpg">
-                        <img src="/frontend/allpack/photographers/photoimage/5.jpg" alt="Ceremony details" class="gallery-img">
+                        <a href="/allpack/photographers/photoimage/5.jpg">
+                        <img src="/allpack/photographers/photoimage/5.jpg" alt="Ceremony details" class="gallery-img">
                         </a>
                         <div class="img-overlay">
                         </div>
@@ -408,8 +408,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/datavand/iv4.png" class="gallery-img">
-                            <source src="/frontend/allpack/photographers/datavand/v4.mp4" type="video/mp4">
+                        <video poster="/allpack/photographers/datavand/iv4.png" class="gallery-img">
+                            <source src="/allpack/photographers/datavand/v4.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -423,8 +423,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <a href="/frontend/allpack/photographers/photoimage/6.jpg">
-                        <img src="/frontend/allpack/photographers/photoimage/6.jpg" alt="Reception details" class="gallery-img">
+                        <a href="/allpack/photographers/photoimage/6.jpg">
+                        <img src="/allpack/photographers/photoimage/6.jpg" alt="Reception details" class="gallery-img">
                         </a>
                         <div class="img-overlay">
                         </div>
@@ -434,8 +434,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/datavand/iv5.png" class="gallery-img">
-                            <source src="/frontend/allpack/photographers/datavand/v5.mp4" type="video/mp4">
+                        <video poster="/allpack/photographers/datavand/iv5.png" class="gallery-img">
+                            <source src="/allpack/photographers/datavand/v5.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -448,8 +448,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <a href="/frontend/allpack/photographers/photoimage/7.jpg">
-                        <img src="/frontend/allpack/photographers/photoimage/7.jpg" alt="Ceremony details" class="gallery-img">
+                        <a href="/allpack/photographers/photoimage/7.jpg">
+                        <img src="/allpack/photographers/photoimage/7.jpg" alt="Ceremony details" class="gallery-img">
                         </a>
                         <div class="img-overlay">
                         </div>
@@ -459,8 +459,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/photoimage/iv8.png" class="gallery-img">
-                            <source src="/frontend/allpack/photographers/datavand/v6.mp4" type="video/mp4">
+                        <video poster="/allpack/photographers/photoimage/iv8.png" class="gallery-img">
+                            <source src="/allpack/photographers/datavand/v6.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
