--- a/frontend/allpack/sound/sound.html
+++ b/frontend/allpack/sound/sound.html
@@ -13,8 +13,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <!-- Custom CSS -->
     <style>
         /* General Styles */
@@ -127,7 +127,7 @@
 
         /* Parallax Effect */
         .parallax {
-            background-image: url('/frontend/allpack/sound/sounddata/sound1.jpg');
+            background-image: url('/allpack/sound/sounddata/sound1.jpg');
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
@@ -226,12 +226,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="home.htm">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="about.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Packages</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="booking.html">Booking</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="/home" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/packages">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/suppliers">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/booking">Booking</a></li>
                 </ul>
             </div>
         </div>
@@ -254,7 +254,7 @@
         <!-- Sound Systems -->
         <div class="row mt-5">
             <div class="col-md-6" data-aos="fade-right">
-                <img src="/frontend/allpack/sound/sounddata/sound1.jpg" alt="Sound System" class="img-fluid rounded custom-image">
+                <img src="/allpack/sound/sounddata/sound1.jpg" alt="Sound System" class="img-fluid rounded custom-image">
             </div>
             <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
                 <h2>Sound Systems</h2>
@@ -270,7 +270,7 @@
         <!-- Lighting Design -->
         <div class="row mt-5">
             <div class="col-md-6 order-md-2" data-aos="fade-left">
-                <img src="/frontend/allpack/sound/sounddata/sound2.jpg" alt="Lighting Design" class="img-fluid rounded custom-image">
+                <img src="/allpack/sound/sounddata/sound2.jpg" alt="Lighting Design" class="img-fluid rounded custom-image">
             </div>
             <div class="col-md-6 order-md-1" data-aos="fade-right" data-aos-delay="100">
                 <h2>Lighting Design</h2>
@@ -297,8 +297,8 @@
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
                                 <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound3.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound3.jpg" class="card-img-top" alt="Gallery Image 1">
+                                    <a href="/allpack/sound/sounddata/sound3.jpg">
+                                        <img src="/allpack/sound/sounddata/sound3.jpg" class="card-img-top" alt="Gallery Image 1">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Wedding Sound Setup</h5>
@@ -306,8 +306,8 @@
                                     </div>
                                 </div>
                                 <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound11.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound11.jpg" class="card-img-top" alt="Gallery Image 2">
+                                    <a href="/allpack/sound/sounddata/sound11.jpg">
+                                        <img src="/allpack/sound/sounddata/sound11.jpg" class="card-img-top" alt="Gallery Image 2">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Event Lighting Design</h5>
@@ -315,8 +315,8 @@
                                     </div>
                                 </div>
                                 <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound5.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound5.jpg" class="card-img-top" alt="Gallery Image 3">
+                                    <a href="/allpack/sound/sounddata/sound5.jpg">
+                                        <img src="/allpack/sound/sounddata/sound5.jpg" class="card-img-top" alt="Gallery Image 3">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Wedding Reception Setup</h5>
@@ -329,8 +329,8 @@
                         <div class="carousel-item">
                             <div class="d-flex justify-content-center">
                                 <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound6.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound6.jpg" class="card-img-top" alt="Gallery Image 4">
+                                    <a href="/allpack/sound/sounddata/sound6.jpg">
+                                        <img src="/allpack/sound/sounddata/sound6.jpg" class="card-img-top" alt="Gallery Image 4">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Outdoor Wedding Setup</h5>
@@ -338,8 +338,8 @@
                                     </div>
                                 </div>
                                 <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound7.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound7.jpg" class="card-img-top" alt="Gallery Image 5">
+                                    <a href="/allpack/sound/sounddata/sound7.jpg">
+                                        <img src="/allpack/sound/sounddata/sound7.jpg" class="card-img-top" alt="Gallery Image 5">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Wedding Stage Lighting</h5>
@@ -347,8 +347,8 @@
                                     </div>
                                 </div>
                                 <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound8.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound8.jpg" class="card-img-top" alt="Gallery Image 6">
+                                    <a href="/allpack/sound/sounddata/sound8.jpg">
+                                        <img src="/allpack/sound/sounddata/sound8.jpg" class="card-img-top" alt="Gallery Image 6">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Wedding Ceremony Setup</h5>
