--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -146,21 +146,23 @@
     <div class="col-md-4">
      
       <div class="card " >
-
+      <a href="/gakondo">
         <img src="/assethome/gak1.jpg" class="card-img-top" alt="...">
+        </a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title mb-2">Gakondo</h5>
-          <a href="#" class="btn btn-primary">Read More</a>
+          <a href="/gakondo" class="btn btn-primary">Read More</a>
         </div>
       </div>
     </div>
   <div class="col-md-4">
     <div class="card " >
-
+      <a href="/sound">
       <img src="/assethome/sound6.jpg" class="card-img-top" alt="...">
+      </a>
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Sound & lighting</h5>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="/sound" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
@@ -168,31 +170,34 @@
   
       <div class="col-md-4">
         <div class="card">
+          <a href="/photographers">
           <img src="/assethome/photo.jpg" class="card-img-top" alt="...">
+          </a>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title mb-2">photograph & videograph</h5>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="/photographers" class="btn btn-primary">Read More</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card " >
-    
+         <a href="/catering">
           <img src="/assethome/food1.jpg" class="card-img-top" alt="...">
+          </a>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title mb-2">Catering</h5>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="/catering" class="btn btn-primary">Read More</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
       <div class="card " >
-        <a href="/frontend/allpack/iriza/iriza.html">
+        <a href="/service">
         <img src="/assethome/iriza14.jpg" class="card-img-top" alt="...">
         </a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title mb-2">Service</h5>
-          <a href="/frontend/allpack/iriza/iriza.html" class="btn btn-primary">Read More</a>
+          <a href="/service" class="btn btn-primary">Read More</a>
         </div>
       </div>
     </div>
